fixed header spacing issue

--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -19,11 +19,9 @@ body {
 }
 
 .text-vertical-center {
-    position: absolute;
-    top: 40%;
-    right: 40%;
-    text-align: center;
-    vertical-align: middle;
+    position: fixed;
+    width: 100%;
+    margin-top: 100px
 }
 
 .text-vertical-center h1 {
@@ -163,9 +161,6 @@ hr.small {
 /* Header */
 
 .header/*, .header img*/{
-    position: relative;
-    background-image: url("img/IMG_3241.jpg");
-    width: 100%;
     height: 100%;
     text-align: center;
     -webkit-background-size: cover;
